--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bookshelf": "^0.14.2",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
-    "knex": "^0.13.0",
+    "express-session": "^1.16.1",
+    "knex": "^0.16.5",
     "method-override": "^3.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.10.0"
   }
 }
