--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/BrettMatsumoto/express-gallery#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bookshelf": "^0.14.2",
     "cookie-parser": "^1.4.4",
@@ -27,6 +28,7 @@
     "express-session": "^1.16.1",
     "knex": "^0.16.5",
     "method-override": "^3.0.0",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.10.0"
   }
