--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,6 +5,7 @@ services:
       - 3000:3000
     volumes:
       - ./:/app
+    command: ["./node_modules/.bin/nodemon", "server.js"]
     env_file: .env
     networks:
       - my-app-network
