--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.16.1",
     "knex": "^0.16.5",
     "method-override": "^3.0.0",
+    "nodemon": "^1.19.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.10.0"
